--- a/styles/my.css
+++ b/styles/my.css
@@ -91,8 +91,11 @@ textarea {
     height: 80%;
   }
 }
-
+.project-container:hover {
+  opacity: 1;
+}
 /*end global*/
+
 /*nav*/
 .nav-container {
   position: fixed;
@@ -179,29 +182,27 @@ textarea {
   font-family: var(--Ubuntu-font);
 }
 
-.dropdown i {
-  display: none;
-}
+.dropdown .menu-icon-close,
 .dropdown .menu-icon {
+  display: none;
   text-decoration: none;
-  width: 100%;
   height: auto;
+  color: white;
+  width: 100%;
+  justify-content: center;
+  align-content: center;
 }
 
 @media only screen and (max-width: 600px) {
-  /*nav for small screen */
+  /*nav for small screen,mobile */
   .nav-wrap {
     grid-template-columns: 1fr;
   }
   .logo {
     grid-column: auto; /*take full column*/
   }
-  .dropdown i {
+  .dropdown .menu-icon {
     display: flex;
-    color: white;
-    width: 100%;
-    justify-content: center;
-    align-content: center;
   }
 
   .dropdown {
@@ -225,6 +226,20 @@ textarea {
     -webkit-animation: drop 1.2s normal 1;
   }
 
+  .dropdown:hover .menu-icon {
+    display: none;
+  }
+
+  .dropdown:hover .menu-icon-close,
+  .dropdown:active .menu-icon-close {
+    display: flex;
+  }
+  .dropdown:hover .menu-icon-close:hover,
+  .dropdown:hover .menu-icon-close:active,
+  .dropdown:active .menu-icon-close:hover,
+  .dropdown:active .menu-icon-close:active {
+    display: none;
+  }
   .left-menu {
     display: flex;
     flex-direction: column;
@@ -235,8 +250,7 @@ textarea {
     background: var(--bg-color-nav);
   }
 
-  .dropdown:hover .left-menu,
-  .dropdown:active .left-menu {
+  .dropdown:hover .left-menu {
     opacity: 1;
     visibility: visible;
     height: 100%;
@@ -248,8 +262,7 @@ textarea {
     height: 0;
   }
 
-  .dropdown:hover .left-menu li,
-  .dropdown:active .left-menu li {
+  .dropdown:hover .left-menu li {
     height: 100%;
     transition: height 1s ease-in-out;
   }
@@ -259,14 +272,44 @@ textarea {
     visibility: hidden;
   }
 
-  .dropdown:hover .left-menu li a,
-  .dropdown:active .left-menu li a {
+  .dropdown:hover .left-menu li a {
+    justify-content: center;
+    align-items: center;
+    width: 100%;
     visibility: visible;
     opacity: 1;
     transition: opacity 1.2s ease-in-out;
   }
 } /*end media query*/
 /*end nav*/
+
+/*nav pointer*/
+/*1.2 em is the size of nav*/
+#about {
+  position: absolute;
+  width: 0;
+  height: 0;
+  visibility: hidden;
+  opacity: 0;
+  top: calc(100% - 1.2em);
+}
+#project {
+  position: absolute;
+  width: 0;
+  height: 0;
+  visibility: hidden;
+  opacity: 0;
+  top: calc(200% - 1.2em);
+}
+#contact {
+  position: absolute;
+  width: 0;
+  height: 0;
+  visibility: hidden;
+  opacity: 0;
+  top: calc(300% - 1.2em);
+}
+/*end pointer*/
 
 /*main*/
 .main-container {
@@ -334,6 +377,7 @@ textarea {
 }
 /* end landing*/
 /*about*/
+
 .about-wrapper {
   position: relative;
   background-color: var(--bg-color-about);
@@ -410,7 +454,7 @@ textarea {
   position: relative;
   display: grid;
   width: 95%;
-  max-width: calc(1000px + 4vmax); /*max width of project*/
+  max-width: calc(800px + 4vmax); /*max width of project*/
   height: 100%;
   min-height: 100vh;
   grid-template-rows: 2.7em auto 0.5em;
@@ -601,7 +645,7 @@ textarea {
   color: black;
   z-index: 1;
 }
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 600px) {
   .slider-index > span {
     display: block;
     background: var(--bg-color-main4);
@@ -628,7 +672,7 @@ textarea {
   display: grid;
   width: 90%;
   min-height: 80%;
-  max-width: 1000px;
+  max-width: 800px;
   border-radius: 40px;
   grid-template-rows: auto 1fr auto;
   background: #ffe396;
@@ -744,7 +788,7 @@ textarea {
   position: relative;
   display: flex;
   width: 100%;
-  height: 2em;
+  height: 2em; /*fixed height could go out of container*/
   justify-content: center;
   align-items: center;
 }
