--- a/styles/my.css
+++ b/styles/my.css
@@ -18,6 +18,12 @@
   --bg-color-about: #e7fff9;
   --bg-color-project: #f4c2af;
   --bg-color-nav: #393939;
+
+  --color1--: #f2856d;
+  --color2--: #f23d5e;
+  --color3--: #0477bf;
+  --color4--: #049dd9;
+  --color5--: #f2c335;
 }
 html {
   font-size: calc(1em + 2vmin);
@@ -34,7 +40,8 @@ body {
   height: 100%;
   max-width: 100vw;
   margin: 0 auto;
-  background: black; /*test*/
+  animation: fade-in 2s normal 1 ease-in-out;
+  -webkit-animation: fade-in 2s normal 1 ease-in-out;
 }
 .ubuntu {
   font-family: var(--Ubuntu-font);
@@ -94,12 +101,43 @@ textarea {
 @keyframes drop2 {
   0% {
     height: 90%;
+    opacity: 0.5;
+    background-color: var(--color1--);
   }
   50% {
     height: 95%;
   }
   100% {
     height: 100%;
+    opacity: 1;
+  }
+}
+
+@keyframes bar {
+  0% {
+    width: 50%;
+    opacity: 0;
+  }
+  50% {
+  }
+  100% {
+    width: 100%;
+    opacity: 1;
+  }
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0.8;
+    background: black;
+  }
+  10% {
+    opacity: 1;
+    background: whitesmoke;
+  }
+  100% {
+    opacity: 1;
+    background: white;
   }
 }
 
@@ -296,7 +334,8 @@ textarea {
 
 #about,
 #project,
-#contact {
+#contact,
+#profile {
   position: absolute;
   width: 0;
   height: 0;
@@ -374,7 +413,7 @@ textarea {
 /*bio*/
 .bio-wrapper {
   position: relative;
-  background-color: var(--bg-color-body);
+  background-color: var(--bg-color-about);
   display: flex;
   width: 100%;
   height: 100%;
@@ -382,31 +421,38 @@ textarea {
   align-items: center;
   box-sizing: border-box;
   border-top: 0.5em solid var(--bg-color-main1);
+  border-bottom: 0.5em solid var(--bg-color-main1);
 }
 .bio-container {
   position: relative;
   display: grid;
-  width: 90%;
-  max-width: calc(700px + 4vmax);
+  width: 98%;
+  max-width: calc(800px + 4vmax);
   height: 100%;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 0.5em auto 0.5em;
+  grid-template-rows: 0.3em 1fr 0.3em;
   box-sizing: border-box;
   font-size: 1em;
   align-content: center;
   grid-gap: 0.5em;
 }
+.bio-container a {
+  color: var(--color4--);
+  font-weight: bold;
+  text-decoration: none;
+}
+.bio-container a:hover {
+  color: var(--color3--);
+}
 
 .bio-container .bio-profile {
   grid-row: 2;
-  display: grid;
+  display: flex;
+  flex-direction: column;
   font-size: 0.7em;
   width: 100%;
-  justify-self: center;
-  justify-content: center;
-  grid-template-rows: auto auto auto auto auto;
-  grid-template-columns: auto;
-  grid-row-gap: 0.5em;
+
+  height: 100%;
 }
 
 .bio-container .bio-skill {
@@ -414,15 +460,14 @@ textarea {
   display: grid;
   font-size: 0.7em;
   width: 100%;
-  justify-self: center;
   justify-content: center;
-  grid-template-rows: auto auto auto auto auto;
-  grid-template-columns: auto 1fr;
-  grid-row-gap: 0.5em;
+  grid-template-rows: auto;
+  grid-template-columns: 1fr;
 }
-
+.bio-profile li,
 .bio-skill li {
-  grid-column: 1;
+  display: block;
+  grid-column: 1/-1;
 }
 
 .bio-profile h3,
@@ -431,9 +476,32 @@ textarea {
 }
 .gauge {
   display: flex;
-  grid-column: 2;
-  margin-left: 10px;
-  background: var(--bg-color-main3);
+  grid-column: span 2;
+  justify-content: flex-end;
+  color: whitesmoke;
+}
+.gauge.yellow {
+  width: 50%;
+  background: var(--color5--);
+}
+.gauge.blue {
+  width: 70%;
+  background: var(--color3--);
+}
+.gauge.pink {
+  width: 80%;
+  background: var(--color1--);
+}
+.gauge.red {
+  width: 95%;
+  background: var(--color2--);
+}
+.gauge-track {
+  display: flex;
+  grid-column: span 2;
+  background: rgb(203, 202, 202);
+  animation: bar 2s normal 1 ease-in-out;
+  -webkit-animation: bar 2s normal 1 ease-in-out;
 }
 
 /*about*/
@@ -611,7 +679,7 @@ textarea {
   margin: 0 auto;
   display: flex;
   justify-content: space-around;
-  border-radius: 10px;
+  border-radius: 8px;
 }
 
 .slides > div:not(:first-child) .project-h2::before {
@@ -718,7 +786,7 @@ textarea {
   font-size: 0.75em;
   color: black;
   z-index: 1; /*bring it in front of div */
-  background: #edce7979; /*hack fix*/
+  background: #edce7979; /*hack color opacity fix*/
 }
 .slider-index > p a {
   color: inherit;
@@ -898,7 +966,7 @@ textarea {
   display: flex;
   width: 40%;
   height: 100%;
-  background: var(--bg-color-main4);
+  background: var(--color5--);
   box-shadow: 0px 5px 5px var(--bg-color-main4);
   border-radius: 10px;
   border-style: none;
@@ -910,11 +978,11 @@ textarea {
 }
 .form-button button:hover {
   background: #f4cb5c62;
-  border: 1px solid var(--bg-color-main4);
+  border: 1px solid var(--color5--);
 }
 .form-button button:active {
-  background: #f8d470;
-  border: 1px solid var(--bg-color-main4);
+  background: var(--bg-color-main4);
+  border: 1px solid var(--color5--);
 }
 .form-button button i::after {
   content: ' Send ';
